# milendall

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  README.rst  get_file_list_one_liner.sh
.github/: copilot-instructions.md
.github/workflows/: ci-build-tests.yml  codeql-analysis.yml  test.yml  workflow.yml
.unotes/: unotes_meta.json
catch2/: catch_amalgamated.hpp
cmake/: FindFreeImage.cmake  FindFreeImagePlus.cmake
data/levels/: compile_level.sh
doc/: 0-specification.md  1-generation.md
game/src/: common.cxx  common.hxx  face_hard.cxx  face_hard.hxx  face_list.cxx  face_list.hxx  file_library.cxx  file_library.hxx  game.cxx  game.hxx  gl_init.cxx  gl_init.hxx  gltf_data_accessor.cxx  gltf_data_accessor.hxx  gltf_data_accessor_iface.hxx  gltf_exception.hxx  gltf_frame.cxx  gltf_frame.hxx  gltf_instance_iface.cxx  gltf_instance_iface.hxx  gltf_material_accessor.cxx  gltf_material_accessor_iface.hxx  gltf_material_accessor_library_iface.hxx  gltf_mesh.cxx  gltf_mesh.hxx  gltf_model.cxx  gltf_model.hxx  gltf_table_accessor.cxx  gltf_table_accessor.hxx  helper_math.cxx  helper_math.hxx  json_helper_accessor.cxx  json_helper_accessor.hxx  json_helper_math.cxx  json_helper_math.hxx  keyboard.cxx  keyboard.hxx  level.cxx  level.hxx  main.cxx  (+13 more)
game/test/: test_common.hpp  test_common.hxx  unit-level-single.json  unit_clipping_planes.cpp  unit_clipping_planes.cxx  unit_face_list.cpp  unit_face_list.cxx  unit_file_library.cpp  unit_file_library.cxx  unit_gltf_animation.cxx  unit_gltf_data_accessor.cpp  unit_gltf_data_accessor.cxx  unit_gltf_material_accessor.cpp  unit_gltf_material_accessor.cxx  unit_gltf_model.cxx  unit_gltf_node.cxx  unit_gltf_table_accessor.cpp  unit_gravity_information.cxx  unit_helper_math.cpp  unit_helper_math.cxx  unit_impl_room_node_portal_register.cxx  unit_json_helper_math.cpp  unit_level.cpp  unit_level.cxx  unit_level_info.cxx  unit_main.cpp  unit_main.cxx  unit_managed_object_instance.cxx  unit_min_max_box.cxx  unit_model_registry.cxx  unit_object_manager.cxx  unit_player.cxx  unit_point_of_view.cxx  unit_room.cpp  unit_room.cxx  unit_room_node_gravity.cxx  unit_script.cxx  unit_states_list.cxx  unit_viewables_registrar_impl.cxx
generator/: build_sample.sh  compile_sample.sh  doc.rst  rooms_graph.xsl
generator/pygenerator/: dev-requirements.txt  pyproject.toml  requirements.txt
generator/pygenerator/src/: animation.py  brick.py  brick_structure.py  concrete_room.py  dressing.py  element.py  elemental_structure.py  gate.py  gate_spec.py  gate_structure.py  generator.py  gltf_helper.py  json_helper.py  level.py  level_instantiation.py  merge_utils.py  milendall_math.py  readme.txt  room.py  room_selector.py  room_selector_regular.py  room_spec.py  room_structure.py  selector.py  selector_regular.py  state.py  typing_defs.py
generator/pygenerator/src/bricks/: __init__.py  gravity_sampler.py  gravity_sampler_func.py  objects_sampler.py  parametric.py  pont.py  rectangular.py  register.py  simple_door.py  simple_pads.py  sphere.py  stair.py  stair_sampler.py  tubular.py  tubular2.py
generator/pygenerator/src/cgtypes/: mat4.py  quat.py  vec3.py  vec4.py
generator/pygenerator/src/dressings/: __init__.py  basic.py  register.py  sphere.py
generator/pygenerator/src/gates/: __init__.py  door.py  register.py  simple_door.py
generator/pygenerator/src/rooms/: __init__ copy.py  __init__.py  rectangular.py  register.py  sphere.py  tubular.py  tubular2.py
generator/pygenerator/src/scripts/: optimum.lua
generator/pygenerator/test/: selector_fake.py  test_animation.py  test_brick.py  test_concrete_room.py  test_json_helper.py  test_level.py  test_math.py  test_room.py  test_selector.py  test_selector_regular.py  test_state.py
generator/pygenerator/test/test_bricks/: test_brick_pont.py  test_brick_rectangular.py  test_brick_simple_door.py  test_brick_simple_pads.py  test_brick_sphere.py
generator/pygenerator/test/test_data_scripts/: test_optimum.lua
generator/pygenerator/test/test_dressings/: test_dressing_basic.py
generator/pygenerator/test/test_gates/: test_gate_simple_door.py
generator/pygenerator/test/test_rooms/: test_room_rectangular.py
generator/pygenerator/test/test_samples/1_room_1_c_1_ss/: level-user.json
generator/pygenerator/test/test_samples/2_room_1_gate/: level-user-instantiated.json  level-user.json
generator/pygenerator/test/test_samples/json/: invalid.json  valid.yaml  valid_complex.json  valid_jsonc.jsonc  valid_simple.json
generator/pygenerator/test/test_samples/level/2_room_1_gate/: level-user-instantiated.json  level-user.json
generator/pygenerator/test/test_samples/level/invalid/: level-instantiated.json
generator/pygenerator/test/test_samples/level/simple/: level-instantiated.json
generator/pygenerator/test/test_samples/level/simple_1r_0b_instantiated/: level-instantiated.json  level.json
generator/pygenerator/test/test_samples/level/simple_1r_0b_instantiated/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/level/simple_1r_instantiated/: level-instantiated.json
generator/pygenerator/test/test_samples/level/simple_1r_instantiated/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_0b/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_0b/room_human_name/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_2b/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_2b_linked/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_2b_root_pad_rotation/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_2b_root_pad_rotation_translation/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_2b_root_pad_translation/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/room/room_3object/room1/: room-instantiated.json
generator/pygenerator/test/test_samples/simple/: level-user-instantiated.json  level-user.json  rooms-logic.json
generator/schema/: name.json  (+20 more)
(+270 files in other folders)
